welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:37: error: not found: type Direction
def isWall(dir : Direction) : Boolean = {
                 ^ColumnByColumn:28: error: not found: value Direction
	if(isWall(Direction.EST) && isWall(Direction.SUD))
                  ^ColumnByColumn:39: error: not found: type Direction
	var initial:Direction = getDirection();
                    ^